<resources>
    <string name="app_name">Beforeget</string>

    <!--나의기록뷰-->
    <string name="record">Record</string>
    <string name="term">기간</string>
    <string name="media">미디어</string>
    <string name="start_score">별점</string>
    <string name="test_date">2022. 01. 03</string>
    <string name="test_title">내가 널 사랑할 수 없는 10가지 이유</string>
    <string name="test_subtitle">흥미진진한 줄거리</string>

    <!-- 통계 -->
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="report">Report</string>
    <string name="date">2021년 12월</string>
    <string name="month">12</string>
    <string name="month_sub">월의</string>
    <string name="nickname">포릐</string>
    <string name="nick_sub">님은?</string>
    <string name="report1_description">이번 달 나의 소비 유형을 알아보세요</string>
    <string name="report1_title">티키타카 뮤지션</string>
    <string name="report1_subtitle">하루의 시작과 끝을 음악과 함께하시는군요!\n12월의 음악 기록이 가장 많은 당신,\n
        오늘은 어떤 음악이 당신의 하루를 채웠나요?\n다음 달, 나의 새로운 유형을 기대해 보세요.</string>

    <string name="rank">유형별 랭킹</string>
    <string name="rank_month">12</string>
    <string name="rank_description">월 한 달 기록률이 가장 높은 top 3</string>
    <string name="rank1_count">22</string>
    <string name="rank1_name">Book</string>
    <string name="rank2_count">10</string>
    <string name="rank2_name">Music</string>
    <string name="rank3_count">7</string>
    <string name="rank3_name">Movie</string>
    <string name="rank_comment">the best\nrecord</string>
    <string name="rank_title_name">책</string>
    <string name="rank_title">을 가장 많이 읽었어요</string>
    <string name="rank_subtitle">12월 한 달간 22권의 책을 기록하셨네요!\n다음으로 많은 기록을 남긴 유형 음악과 영화는\n
        각각 10개, 7개 기록했어요.</string>

    <string name="graph">월별 그래프</string>
    <string name="graph_description">가장 많은 기록을 한 달을 확인해보세요</string>
    <string name="graph_month">12</string>
    <string name="graph_month_unit">월</string>
    <string name="graph_3_month">3M</string>
    <string name="graph_5_month">5M</string>
    <string name="graph_title_count">13</string>
    <string name="graph_title">개의 기록을 남겼어요</string>
    <string name="graph_subtitle">지난달 보다 4개가 늘었네요\n8월부터 5개월간 가장 많은 기록은 남긴 달은\n
        10월로, 30개의 기록을 남겼어요!\n다음 달, 나의 그래프는 어떤 모양일까요?</string>

    <string name="sentence">유형별 한 줄 리뷰 순위</string>
    <string name="sentence_description">유형 카드를 탭하여 확인해보세요</string>
    <string name="sentence_type1">Movie</string>
    <string name="sentence_type2">Book</string>
    <string name="sentence_type3">TV</string>
    <string name="sentence_type4">Music</string>
    <string name="sentence_type5">Webtoon</string>
    <string name="sentence_type6">Youtube</string>
    <string name="sentence1">너무 웃겨요</string>
    <string name="sentence2">눈물 좔좔 호수수</string>
    <string name="sentence3">시간순삭</string>
    <string name="sentence_empty">해당 유형을\n기록해보세요</string>


    <!--메인뷰-->
    <string name="main_name">포릐</string>
    <string name="main_sublabel">님, 잊기 전에 기록해보세요.</string>
    <string name="main_label">오늘은 어떤 미디어를\n감상하셨나요?</string>
    <string name="main_record">기록하기</string>
    <string name="main_reportlabel">기록</string>
    <string name="main_countlabel">N개</string>
    <string name="main_viewallbtn">전체보기</string>

    <!--유형선택뷰-->
    <string name="media_intro">오늘은 어떤 미디어를\n감상하셨나요?</string>
    <string name="media_movie">Movie</string>
    <string name="media_tv">TV</string>
    <string name="media_webtoon">Webtoon</string>
    <string name="media_book">Book</string>
    <string name="media_music">Music</string>
    <string name="media_youtube">Youtube</string>
    <string name="media_next">다음</string>


    <!--글쓰기뷰-->
    <string name="write_done">완료</string>
    <string name="write_ratinglabel">이 영화의 별점은 몇 점인가요?</string>
    <string name="write_title">영화 제목</string>
    <string name="write_titleinput">영화의 제목은 무엇인가요?</string>
    <string name="write_oneline">한 줄 리뷰</string>
    <string name="write_addonelinebtn">+ 리뷰 추가</string>
    <string name="write_comment">코멘트</string>
    <string name="write_commentinput">영화를 보며 어떤 생각을 했나요?</string>
    <string name="write_additem">기록항목 추가</string>
    <string name="write_edit">기록항목 삭제</string>
    <string name="write_resetall">전체 초기화</string>
    <string name="write_apply">적용</string>
    <string name="write_onelinereview1">아름다운 영상미</string>
    <string name="write_onelinereview2">연기가 훌륭해요</string>
    <string name="write_onelinereview3">흥미진진한 줄거리</string>
    <string name="write_onelinereview4">OST 맛집</string>
    <string name="write_onelinereview5">최고의 반전!</string>
    <string name="write_onelinereview6">마음이 따듯해져요</string>
    <string name="write_addoneline">리뷰 추가</string>


    <!--기록항목 추가뷰-->
    <string name="addwrite_mainlabel1">이런 내용을 기록해 보는 건 어때요?</string>
    <string name="addwrite_mainlabel2">더 기록해보고 싶은 내용이 있나요?</string>
    <string name="addwrite_cantext">직접 텍스트 항목을 추가할 수 있어요.</string>
    <string name="addwrite_canimage">직접 이미지 항목을 추가할 수 있어요.</string>
    <string name="addwrite_nextbtn">다음</string>


    <!--나의기록 필터뷰-->
    <string name="second_week">2주</string>
    <string name="month_one">1개월</string>
    <string name="three_month">3개월</string>
    <string name="direct_input">직접입력</string>
    <string name="select">선택해주세요.</string>
    <string name="apply">적용</string>
    <string name="movie">Movie</string>
    <string name="book">Book</string>
    <string name="music">Music</string>
    <string name="youtube">Youtube</string>
    <string name="webtoon">Webtoon</string>
    <string name="start">시작</string>
    <string name="end">끝</string>
    <string name="select_date">날짜를 선택해주세요.</string>
    <string name="tv">TV</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="term_refresh">기간 초기화</string>
    <string name="media_refresh">미디어 초기화</string>
    <string name="start_score_refresh">별점 초기화</string>
    <string name="login_start_email_login">이메일 로그인</string>
    <string name="login_signup_text">가입하기</string>
    <string name="email_sign_title">이메일 로그인</string>
    <string name="email_signin_button">로그인</string>
    <string name="email_signin_forget_password">비밀번호를 잊어버리셨나요?</string>
    <string name="email_signin_hint_email_input">이메일</string>
    <string name="login_apple_button">Apple로 로그인</string>
    <string name="login_kakao_button">카카오로그인</string>
    <string name="email_signin_password_input">비밀번호</string>


    <!--나의기록 상세뷰, 고정뷰-->
    <string name="one_review">한 줄 리뷰</string>
    <string name="review_1">흥미진진한 줄거리</string>
    <string name="review_2">연기가 일품이에요!</string>
    <string name="review_3">인생영화</string>
    <string name="review_4">아름다운 영상미</string>
    <string name="review_5">마음이 따듯해져요</string>
    <string name="review_6">최고의 반전!</string>
    <string name="comment_title">코멘트</string>
    <string name="comment">꽤나 폭력적인 장면을 폭죽이 터진다거나, 슬로우\n모션 등으로 표현하여 폭력성을 영상미로 승화시\n킨 점이 인상깊다. 또한 영화 전반적으로 풍기는\n앤틱한 분위기가 내 취향을 저격해서 눈이 즐거웠\n던 영화다.</string>
    <string name="kingsman">킹스맨</string>
    <string name="date_detail">2022. 01. 10. MON</string>

    <!--나의기록 상세뷰- 영화뷰-->
    <string name="poster">포스터</string>
    <string name="famous_line_title">명대사</string>
    <string name="famous_line">Manners maketh man.</string>
    <string name="genre_tilte">장르</string>
    <string name="genre">액션, SF, 범죄, 스릴러, 코미디, 모험</string>
    <string name="story_tilt">줄거리</string>
    <string name="story">세상에서 가장 위험한 면접이 시작된다! 높은 IQ, 주\n니어 체조대회 2년 연속 우승! 그러나 학교 중퇴, 해\n병대 중도 하차.동네 패싸움에 직장은 가져본 적도\n없이 별볼일 없는 루저로 낙인 찍혔던 ‘그’가 ‘젠틀맨\n스파이’로 전격 스카우트 됐다!</string>
    <string name="ost_tilte">OST</string>
    <string name="ost">OST 이름</string>
    <string name="director">감독</string>
    <string name="director_name">매슈 본</string>
    <string name="actor">배우</string>
    <string name="actor_name">콜린 퍼스, 태런 에저튼, 마크\n스트롱, 마이클 케인, 사무엘 L. 잭슨</string>

    <!--나의기록 상세뷰- book뷰-->
    <string name="writer">작가</string>
    <string name="writer_name">김송현이 작가예여</string>
    <string name="publisher">출판사</string>
    <string name="publisher_name">한샘 출판사</string>
    <string name="cover">표지</string>
    <string name="impressive_verse">인상깊은 구절</string>
    <string name="impressive_verse_content">사실 이것은 다 빈치가 살짝 장난을 친 것입\n니다. 왼쪽에 있는 시골 풍경을 낮게 그려서,\n오른쪽보다 왼쪽의 모나리자가 더 커보이게\n한 겁니다.</string>

    <!--나의기록 상세뷰 tv뷰-->
    <string name="famous_scene">명장면</string>
    <string name="ott">방송사\nOTT</string>
    <string name="ost_content_tv">Polarised - Cosmo’s Midnight</string>

    <!--나의기록 상세뷰 music뷰-->
    <string name="album">앨범</string>
    <string name="album_cover">앨범 커버</string>
    <string name="lyrics">가사</string>
    <string name="lyrics_content">I\'m feeling like, I\'m feeling like I might have\nbeen the wrong time\n \'Cause you\'re on my mind\nI\'m feeling like, I\'m feeling like this time I wish\nI could be first\n
\'Cause you\'re on my mind\nI\'m paralyzed\n
I\'m feeling like, I\'m feeling like I might have\nbeen the wrong time\n
I\'m paralyzed\n
I\'m feeling like, I\'m feeling like I might have\nbeen the wrong time\n
\'Cause you\'re on my mind\n
And though you\'re right\n
I\'m paralyzed\n
I\'m so polarized\n
I could be anywhere in the world\n
You\'ll be floating in my head\n
Like a rendezvous, very late in the night\n
Bet you and I could really meet\n
I just wanna cruise with you\n
I just wanna travel with you\n
I\'m so polarized\n
I\'m so polarized</string>
    <string name="link">링크</string>
    <string name="singer">가수</string>
    <string name="blockb">블락비</string>
    <string name="link_contetn">https://www.youtube.com/watch?v=qZFo0PYkHFo</string>

    <!--나의기록 상세 뷰 webtoon-->
    <string name="day_week">요일</string>
    <string name="monday">월요일</string>
    <string name="platform">플랫폼</string>
    <string name="input_user">사용자 입력 텍스트</string>

    <!--나의기록 상세뷰 youtube-->
    <string name="category">카테고리</string>
    <string name="timestamp">타임스탬프</string>
    <string name="channel">채널</string>
    <string name="timestamp_contetn">13:45</string>

    <!--Dialog Button Text-->
    <string name="okText">확인</string>
    <string name="cancelText">취소</string>
    <string name="delete">정말로 삭제하시겠어요? </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Setting -->
    <string name="setting">Setting</string>
    <string name="setting_email">subin0723@beforeget.com</string>
    <string name="setting_change_pw">비밀번호 변경</string>
    <string name="setting_service">서비스 이용약관</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_withdrawal">서비스 탈퇴</string>
    <string name="setting_info">about Beforeget</string>

    <!-- write complete -->
    <string name="complete_title">새로운 기록이 쌓였어요.\n확인해 보세요!</string>
    <string name="complete_go">작성한 글 보러가기</string>
    <string name="complete_main">메인으로 돌아가기</string>
</resources>