

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="before.forget.feature.report.ReportLabelingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_report_labeling"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_icn_star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@string/month"
            android:textColor="@color/black200"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/iv_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_month_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@string/month_sub"
            android:textColor="@color/black200"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/tv_month"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@string/nickname"
            android:textColor="@color/black200"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/tv_month_sub"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nickname_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@string/nick_sub"
            android:textColor="@color/black200"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/tv_nickname"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_labelling"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/rectangle_fill_black"
            app:layout_constraintBottom_toTopOf="@+id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/report1_description"
            app:layout_constraintStart_toStartOf="@+id/iv_icon"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@string/report1_title"
            android:textColor="@color/black200"
            android:textSize="21sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_subtitle"
            app:layout_constraintStart_toStartOf="@+id/iv_icon" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/pretendard_regular"
            android:lineSpacingExtra="5sp"
            android:text="@string/report1_subtitle"
            android:textColor="@color/black200"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/iv_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
