<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_sentence_back_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_img_sentence_back" />

    <TextView
        android:id="@+id/tv_sentence_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle_border_green_3"
        android:fontFamily="@font/pretendard_regular"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/sentence1"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_sentence_2"
        app:layout_constraintEnd_toEndOf="@+id/iv_sentence_back_bg"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_sentence_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_border_green_3"
        android:fontFamily="@font/pretendard_regular"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/sentence2"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_sentence_back_bg"
        app:layout_constraintEnd_toEndOf="@+id/iv_sentence_back_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sentence_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle_border_green_3"
        android:fontFamily="@font/pretendard_regular"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/sentence3"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_sentence_back_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sentence_2" />

    <ImageView
        android:id="@+id/iv_sentence_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sentence_1"
        app:layout_constraintEnd_toEndOf="@+id/iv_sentence_back_bg"
        app:layout_constraintStart_toStartOf="@+id/iv_sentence_back_bg"
        app:srcCompat="@drawable/ic_icn_star_green" />

    <TextView
        android:id="@+id/tv_sentence_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sentence_empty"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/iv_sentence_back_bg"
        app:layout_constraintStart_toStartOf="@+id/iv_sentence_back_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_sentence_2" />


</androidx.constraintlayout.widget.ConstraintLayout>